--- a/demoApp/demoApp/en.lproj/MainStoryboard.storyboard
+++ b/demoApp/demoApp/en.lproj/MainStoryboard.storyboard
@@ -15,9 +15,9 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6FC-VD-eBT">
-                                <rect key="frame" x="112" y="104" width="97" height="44"/>
+                                <rect key="frame" x="118" y="104" width="86" height="44"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="API: Login">
+                                <state key="normal" title="API: Like">
                                     <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -28,11 +28,59 @@
                                     <action selector="callAPI_player1:" destination="2" eventType="touchUpInside" id="Lty-2s-SEn"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Doq-u3-Klc">
+                                <rect key="frame" x="111" y="155" width="101" height="44"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="API: Player">
+                                    <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="callAPI_player:" destination="2" eventType="touchUpInside" id="cW3-oO-ei3"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q6O-iN-hAu">
+                                <rect key="frame" x="65" y="206" width="191" height="44"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Queue: Serialize &amp; Save">
+                                    <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="queueSerializeAndSaveToFile:" destination="2" eventType="touchUpInside" id="aLk-jY-p6n"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xu2-VL-Nf1">
+                                <rect key="frame" x="104" y="257" width="114" height="44"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Queue: Load">
+                                    <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="QueueLoadFromFile:" destination="2" eventType="touchUpInside" id="HhN-TV-GwR"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="6FC-VD-eBT" firstAttribute="centerX" secondItem="3" secondAttribute="centerX" type="default" id="egm-3G-Yb1"/>
+                            <constraint firstItem="Q6O-iN-hAu" firstAttribute="centerX" secondItem="3" secondAttribute="centerX" type="default" id="29i-Ao-bDR"/>
+                            <constraint firstItem="Q6O-iN-hAu" firstAttribute="top" secondItem="Doq-u3-Klc" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="8Qt-9o-Vma"/>
+                            <constraint firstItem="xu2-VL-Nf1" firstAttribute="centerX" secondItem="Doq-u3-Klc" secondAttribute="centerX" type="default" id="C0f-z6-gS9"/>
+                            <constraint firstItem="Doq-u3-Klc" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="111" id="EzQ-fI-6Pu"/>
+                            <constraint firstItem="Doq-u3-Klc" firstAttribute="top" secondItem="6FC-VD-eBT" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="FpW-ZQ-UqH"/>
+                            <constraint firstItem="xu2-VL-Nf1" firstAttribute="top" secondItem="Q6O-iN-hAu" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="ggG-Cg-gwN"/>
                             <constraint firstItem="6FC-VD-eBT" firstAttribute="top" secondItem="3" secondAttribute="top" constant="104" id="lWn-3b-PvG"/>
+                            <constraint firstItem="Doq-u3-Klc" firstAttribute="centerX" secondItem="6FC-VD-eBT" secondAttribute="centerX" type="default" id="sWC-mu-H30"/>
                         </constraints>
                     </view>
                 </viewController>
