--- a/demoApp/demoApp/en.lproj/MainStoryboard.storyboard
+++ b/demoApp/demoApp/en.lproj/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" variant="6xAndEarlier" propertyAccessControl="none" useAutolayout="YES" promptedForUpgradeToXcode5="NO" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" variant="6xAndEarlier" propertyAccessControl="none" useAutolayout="YES" promptedForUpgradeToXcode5="NO" initialViewController="3lj-Ih-f5U">
     <dependencies>
         <deployment identifier="iOS"/>
         <development version="4600" identifier="xcode"/>
@@ -11,9 +11,12 @@
             <objects>
                 <viewController id="2" customClass="demoViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="aX7-mJ-8jk">
+                                <rect key="frame" x="150" y="242" width="20" height="20"/>
+                            </activityIndicatorView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6FC-VD-eBT">
                                 <rect key="frame" x="118" y="94" width="86" height="44"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
@@ -59,17 +62,154 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Doq-u3-Klc" firstAttribute="centerX" secondItem="3" secondAttribute="centerX" type="default" id="DJx-bX-OiP"/>
+                            <constraint firstItem="aX7-mJ-8jk" firstAttribute="centerY" secondItem="3" secondAttribute="centerY" type="default" id="1oq-sd-55l"/>
                             <constraint firstItem="Doq-u3-Klc" firstAttribute="top" secondItem="6FC-VD-eBT" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="FpW-ZQ-UqH"/>
                             <constraint firstItem="6FC-VD-eBT" firstAttribute="top" secondItem="3" secondAttribute="top" constant="94" id="Ur7-ES-jc3"/>
+                            <constraint firstItem="aX7-mJ-8jk" firstAttribute="centerX" secondItem="Doq-u3-Klc" secondAttribute="centerX" type="default" id="W9n-tK-g4Q"/>
+                            <constraint firstItem="aX7-mJ-8jk" firstAttribute="centerX" secondItem="3" secondAttribute="centerX" type="default" id="ZJE-Be-oba"/>
                             <constraint firstItem="b02-Qd-gFK" firstAttribute="top" secondItem="Doq-u3-Klc" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="k1A-Tn-OgY"/>
                             <constraint firstItem="Doq-u3-Klc" firstAttribute="centerX" secondItem="6FC-VD-eBT" secondAttribute="centerX" type="default" id="sWC-mu-H30"/>
                             <constraint firstItem="b02-Qd-gFK" firstAttribute="centerX" secondItem="Doq-u3-Klc" secondAttribute="centerX" type="default" id="yze-SB-Udg"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="CP4-dD-8Pf"/>
+                    <connections>
+                        <outlet property="activityIndicator" destination="aX7-mJ-8jk" id="LOf-aP-yMC"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="337" y="-44"/>
+        </scene>
+        <!--Auth & Login UI Nav Controller-->
+        <scene sceneID="yI6-sn-d2j">
+            <objects>
+                <navigationController title="Auth &amp; Login UI Nav Controller" id="3lj-Ih-f5U" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="lFh-g5-y5N">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="5DW-Fm-Fzn" kind="relationship" relationship="rootViewController" id="di7-Ir-r7Z"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PPe-Lk-vxf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1235" y="-44"/>
+        </scene>
+        <!--Auth And Login View Controller-->
+        <scene sceneID="FZc-cp-CaD">
+            <objects>
+                <viewController id="5DW-Fm-Fzn" customClass="authAndLoginViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="C1p-Ed-xQs">
+                        <rect key="frame" x="0.0" y="20" width="320" height="504"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="GG0-P5-SXI">
+                                <rect key="frame" x="150" y="242" width="20" height="20"/>
+                            </activityIndicatorView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" useAutomaticPreferredMaxLayoutWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="IDZ-X5-SG0">
+                                <rect key="frame" x="139" y="270" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="GG0-P5-SXI" firstAttribute="centerY" secondItem="C1p-Ed-xQs" secondAttribute="centerY" type="user" id="6Wc-ig-brz"/>
+                            <constraint firstAttribute="centerY" secondItem="IDZ-X5-SG0" secondAttribute="centerY" constant="-28.5" type="user" id="LSH-6t-s1s"/>
+                            <constraint firstItem="GG0-P5-SXI" firstAttribute="centerX" secondItem="C1p-Ed-xQs" secondAttribute="centerX" type="user" id="NSi-6V-Vq3"/>
+                            <constraint firstItem="IDZ-X5-SG0" firstAttribute="centerX" secondItem="GG0-P5-SXI" secondAttribute="centerX" type="user" id="O2E-pa-VGD"/>
+                            <constraint firstAttribute="centerX" secondItem="IDZ-X5-SG0" secondAttribute="centerX" type="user" id="Vyv-Yd-JWT"/>
+                            <constraint firstItem="IDZ-X5-SG0" firstAttribute="top" secondItem="GG0-P5-SXI" secondAttribute="bottom" constant="8" symbolic="YES" type="user" id="hDg-Gm-yDJ"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="lzU-av-LKF"/>
+                    <connections>
+                        <outlet property="activityLabel" destination="IDZ-X5-SG0" id="3a1-G1-azZ"/>
+                        <segue destination="7s1-CK-cW9" kind="modal" identifier="showMainmenuScreen" id="mkn-og-FA7"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="epB-3Y-pnz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-844" y="-44"/>
+        </scene>
+        <!--Mainmenu Nav UI Controller-->
+        <scene sceneID="EEa-jg-gqq">
+            <objects>
+                <navigationController title="Mainmenu Nav UI Controller" id="7s1-CK-cW9" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="TiC-Ya-cue"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="JJS-9c-Rq5">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="26S-FX-YoR" kind="relationship" relationship="rootViewController" id="BRY-dH-6th"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nWb-fu-Eb1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-485" y="-44"/>
+        </scene>
+        <!--Mainmenu-->
+        <scene sceneID="vXO-TD-T8N">
+            <objects>
+                <viewController title="Mainmenu" id="26S-FX-YoR" customClass="demoViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="dEr-46-8uB">
+                        <rect key="frame" x="0.0" y="20" width="320" height="504"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mainmenu" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" useAutomaticPreferredMaxLayoutWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lwo-sv-NXH">
+                                <rect key="frame" x="120" y="31" width="81" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4fB-1z-r8D">
+                                <rect key="frame" x="102" y="131" width="116" height="44"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Badge Demo">
+                                    <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sjo-rb-xgI">
+                                <rect key="frame" x="64" y="102" width="192" height="22"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Simple Testcases Demo">
+                                    <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="2" kind="push" identifier="showSimpleTestcasesScreen" id="01x-xz-Lbo"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="sjo-rb-xgI" firstAttribute="top" secondItem="dEr-46-8uB" secondAttribute="top" constant="102" type="user" id="A5v-yq-0Yy"/>
+                            <constraint firstAttribute="centerX" secondItem="sjo-rb-xgI" secondAttribute="centerX" type="user" id="Q4I-yb-ENh"/>
+                            <constraint firstItem="lwo-sv-NXH" firstAttribute="centerX" secondItem="dEr-46-8uB" secondAttribute="centerX" type="user" id="YKp-Ic-Tiv"/>
+                            <constraint firstItem="lwo-sv-NXH" firstAttribute="top" secondItem="dEr-46-8uB" secondAttribute="top" constant="31" type="user" id="dTO-cb-4c1"/>
+                            <constraint firstItem="sjo-rb-xgI" firstAttribute="centerX" secondItem="lwo-sv-NXH" secondAttribute="centerX" type="user" id="k0v-F7-vwi"/>
+                            <constraint firstAttribute="centerX" secondItem="4fB-1z-r8D" secondAttribute="centerX" type="user" id="kmJ-hr-7Ky"/>
+                            <constraint firstItem="sjo-rb-xgI" firstAttribute="centerX" secondItem="4fB-1z-r8D" secondAttribute="centerX" type="user" id="qRR-1x-QTL"/>
+                            <constraint firstItem="4fB-1z-r8D" firstAttribute="top" secondItem="sjo-rb-xgI" secondAttribute="bottom" constant="8" symbolic="YES" type="user" id="tyz-76-akY"/>
+                            <constraint firstAttribute="centerY" secondItem="4fB-1z-r8D" secondAttribute="centerY" constant="99.5" type="user" id="y9e-95-TWo"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="e6S-n3-Szc"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dO4-uR-9Bd" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-103" y="-44"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
